variables.RunFour.scala.error
Compilation error:
RunFour:4: error: '(' expected but identifier found.
  if isCarryingBaggle() == true
     ^